<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:background="@color/green_200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/green_200">

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_tanggal_absen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan_tanggal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_pukul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pukul"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal"/>

        <TextView
            android:id="@+id/tv_pukul_absen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan_pukul"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal_absen"/>

        <TextView
            android:id="@+id/tv_kegiatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kegiatan"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pukul"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/sp_kegiatan"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_below="@id/tv_tanggal"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pukul_absen"
            android:entries="@array/kegiatan"
            android:outlineSpotShadowColor="@color/black"
            android:outlineAmbientShadowColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>